Fix wrong label in the web example

--- a/web/example/static/index.html
+++ b/web/example/static/index.html
@@ -10,7 +10,7 @@
       <input id="load" type="submit" value="Load" class="toolbar-button"/>
       <span class="toolbar-text"><input id="file" type="text"/></span>
     </div>
-    <label>Input:</label>
+    <label>Arguments:</label>
     <div>
       <input id="arguments" type="text"/>
     </div>
